addition of .obj model file loading using the tinyobjloader header file

--- a/3D/VulkanGameEngine.vcxproj
+++ b/3D/VulkanGameEngine.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="include\ve\ve_pipeline.hpp" />
     <ClInclude Include="include\ve\ve_renderer.hpp" />
     <ClInclude Include="include\ve\ve_swap_chain.hpp" />
+    <ClInclude Include="include\ve\ve_utils.hpp" />
     <ClInclude Include="include\ve\ve_window.hpp" />
   </ItemGroup>
   <ItemGroup>
