--- a/3D/VulkanGameEngine.vcxproj.filters
+++ b/3D/VulkanGameEngine.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="include\ve\keyboard_movement_controller.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\ve\ve_utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\simple_shader.vert" />
