--- a/3D/VulkanGameEngine.vcxproj
+++ b/3D/VulkanGameEngine.vcxproj
@@ -160,24 +160,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="app\main.cpp" />
-    <ClCompile Include="lib\first_app.cpp" />
-    <ClCompile Include="lib\keyboard_movement_controller.cpp" />
-    <ClCompile Include="lib\simple_render_system.cpp" />
-    <ClCompile Include="lib\ve_buffer.cpp" />
-    <ClCompile Include="lib\ve_camera.cpp" />
-    <ClCompile Include="lib\ve_descriptors.cpp" />
-    <ClCompile Include="lib\ve_device.cpp" />
-    <ClCompile Include="lib\ve_game_object.cpp" />
-    <ClCompile Include="lib\ve_model.cpp" />
-    <ClCompile Include="lib\ve_pipeline.cpp" />
-    <ClCompile Include="lib\ve_renderer.cpp" />
-    <ClCompile Include="lib\ve_swap_chain.cpp" />
-    <ClCompile Include="lib\ve_window.cpp" />
+    <ClCompile Include="lib\app\first_app.cpp" />
+    <ClCompile Include="lib\app\keyboard_movement_controller.cpp" />
+    <ClCompile Include="lib\app\simple_render_system.cpp" />
+    <ClCompile Include="lib\ve\ve_buffer.cpp" />
+    <ClCompile Include="lib\ve\ve_camera.cpp" />
+    <ClCompile Include="lib\ve\ve_descriptors.cpp" />
+    <ClCompile Include="lib\ve\ve_device.cpp" />
+    <ClCompile Include="lib\ve\ve_game_object.cpp" />
+    <ClCompile Include="lib\ve\ve_model.cpp" />
+    <ClCompile Include="lib\ve\ve_pipeline.cpp" />
+    <ClCompile Include="lib\ve\ve_renderer.cpp" />
+    <ClCompile Include="lib\ve\ve_swap_chain.cpp" />
+    <ClCompile Include="lib\ve\ve_window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\ve\first_app.hpp" />
-    <ClInclude Include="include\ve\keyboard_movement_controller.hpp" />
-    <ClInclude Include="include\ve\simple_render_system.hpp" />
+    <ClInclude Include="include\app\first_app.hpp" />
+    <ClInclude Include="include\app\keyboard_movement_controller.hpp" />
+    <ClInclude Include="include\app\simple_render_system.hpp" />
     <ClInclude Include="include\ve\ve_buffer.hpp" />
     <ClInclude Include="include\ve\ve_camera.hpp" />
     <ClInclude Include="include\ve\ve_descriptors.hpp" />
