--- a/3D/VulkanGameEngine.vcxproj.filters
+++ b/3D/VulkanGameEngine.vcxproj.filters
@@ -18,43 +18,43 @@
     <ClCompile Include="app\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_window.cpp">
+    <ClCompile Include="lib\ve\ve_window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\first_app.cpp">
+    <ClCompile Include="lib\app\first_app.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_pipeline.cpp">
+    <ClCompile Include="lib\ve\ve_pipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_device.cpp">
+    <ClCompile Include="lib\ve\ve_device.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_swap_chain.cpp">
+    <ClCompile Include="lib\ve\ve_swap_chain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_model.cpp">
+    <ClCompile Include="lib\ve\ve_model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_game_object.cpp">
+    <ClCompile Include="lib\ve\ve_game_object.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_renderer.cpp">
+    <ClCompile Include="lib\ve\ve_renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\simple_render_system.cpp">
+    <ClCompile Include="lib\app\simple_render_system.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_camera.cpp">
+    <ClCompile Include="lib\ve\ve_camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\keyboard_movement_controller.cpp">
+    <ClCompile Include="lib\app\keyboard_movement_controller.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_buffer.cpp">
+    <ClCompile Include="lib\ve\ve_buffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lib\ve_descriptors.cpp">
+    <ClCompile Include="lib\ve\ve_descriptors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,7 +62,7 @@
     <ClInclude Include="include\ve\ve_window.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\ve\first_app.hpp">
+    <ClInclude Include="include\app\first_app.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\ve\ve_pipeline.hpp">
@@ -83,13 +83,13 @@
     <ClInclude Include="include\ve\ve_renderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\ve\simple_render_system.hpp">
+    <ClInclude Include="include\app\simple_render_system.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\ve\ve_camera.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\ve\keyboard_movement_controller.hpp">
+    <ClInclude Include="include\app\keyboard_movement_controller.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\ve\ve_utils.hpp">
