--- a/3D/VulkanGameEngine.vcxproj
+++ b/3D/VulkanGameEngine.vcxproj
@@ -77,7 +77,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -99,7 +99,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -121,7 +121,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,7 +143,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -162,7 +162,8 @@
     <ClCompile Include="app\main.cpp" />
     <ClCompile Include="lib\app\first_app.cpp" />
     <ClCompile Include="lib\app\keyboard_movement_controller.cpp" />
-    <ClCompile Include="lib\app\simple_render_system.cpp" />
+    <ClCompile Include="lib\app\systems\point_light_system.cpp" />
+    <ClCompile Include="lib\app\systems\simple_render_system.cpp" />
     <ClCompile Include="lib\ve\ve_buffer.cpp" />
     <ClCompile Include="lib\ve\ve_camera.cpp" />
     <ClCompile Include="lib\ve\ve_descriptors.cpp" />
@@ -177,7 +178,8 @@
   <ItemGroup>
     <ClInclude Include="include\app\first_app.hpp" />
     <ClInclude Include="include\app\keyboard_movement_controller.hpp" />
-    <ClInclude Include="include\app\simple_render_system.hpp" />
+    <ClInclude Include="include\app\systems\point_light_system.hpp" />
+    <ClInclude Include="include\app\systems\simple_render_system.hpp" />
     <ClInclude Include="include\ve\ve_buffer.hpp" />
     <ClInclude Include="include\ve\ve_camera.hpp" />
     <ClInclude Include="include\ve\ve_descriptors.hpp" />
@@ -192,6 +194,8 @@
     <ClInclude Include="include\ve\ve_window.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\point_light.frag" />
+    <None Include="shaders\point_light.vert" />
     <None Include="shaders\simple_shader.frag" />
     <None Include="shaders\simple_shader.vert" />
     <None Include="tools\compile.bat" />
