--- a/3D/VulkanGameEngine.vcxproj
+++ b/3D/VulkanGameEngine.vcxproj
@@ -27,26 +27,26 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -77,7 +77,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.280.0\Include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;$(ProjectDir)external;$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -89,6 +89,12 @@
       <Command>
       </Command>
     </CustomBuildStep>
+    <Lib>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.280.0\Lib;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Lib>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -99,7 +105,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.280.0\Include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;$(ProjectDir)external;$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -113,6 +119,12 @@
       <Command>
       </Command>
     </CustomBuildStep>
+    <Lib>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.280.0\Lib;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Lib>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -121,7 +133,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.280.0\Include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;$(ProjectDir)external;$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -133,6 +145,12 @@
       <Command>
       </Command>
     </CustomBuildStep>
+    <Lib>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.280.0\Lib;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Lib>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -143,7 +161,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)\external;$(ProjectDir)\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\VulkanSDK\1.3.280.0\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.280.0\Include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\include;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glm;$(ProjectDir)external;$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,13 +175,14 @@
       <Command>
       </Command>
     </CustomBuildStep>
+    <Lib>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.280.0\Lib;C:\Users\Jonat\Documents\Visual Studio 2022\Libraries\glfw-3.4.bin.WIN64\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Lib>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="app\main.cpp" />
-    <ClCompile Include="lib\app\first_app.cpp" />
-    <ClCompile Include="lib\app\keyboard_movement_controller.cpp" />
-    <ClCompile Include="lib\app\systems\point_light_system.cpp" />
-    <ClCompile Include="lib\app\systems\simple_render_system.cpp" />
     <ClCompile Include="lib\ve\ve_buffer.cpp" />
     <ClCompile Include="lib\ve\ve_camera.cpp" />
     <ClCompile Include="lib\ve\ve_descriptors.cpp" />
@@ -176,10 +195,6 @@
     <ClCompile Include="lib\ve\ve_window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\app\first_app.hpp" />
-    <ClInclude Include="include\app\keyboard_movement_controller.hpp" />
-    <ClInclude Include="include\app\systems\point_light_system.hpp" />
-    <ClInclude Include="include\app\systems\simple_render_system.hpp" />
     <ClInclude Include="include\ve\ve_buffer.hpp" />
     <ClInclude Include="include\ve\ve_camera.hpp" />
     <ClInclude Include="include\ve\ve_descriptors.hpp" />
@@ -192,13 +207,6 @@
     <ClInclude Include="include\ve\ve_swap_chain.hpp" />
     <ClInclude Include="include\ve\ve_utils.hpp" />
     <ClInclude Include="include\ve\ve_window.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="shaders\point_light.frag" />
-    <None Include="shaders\point_light.vert" />
-    <None Include="shaders\simple_shader.frag" />
-    <None Include="shaders\simple_shader.vert" />
-    <None Include="tools\compile.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
